<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#0B0B0B">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumen_semanal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#C94BFF"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#1A1A1A"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvAvgCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promedio_diario"
                android:textColor="#FFFFFF"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvDaysMet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dias_objetivo_cumplido"
                android:textColor="#AAAAAA"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso"
        android:textColor="#1E90FF"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>

    <com.juanc.aplicacion_calorias.BarChartView
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#101820"
        android:padding="16dp"/>

</LinearLayout>